# scmver

./: .coveragerc  .gitignore  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  codeql.yml
scmver/: __init__.py  __main__.py  _compat.py  _typing.py  bazaar.py  cli.py  core.py  darcs.py  fossil.py  git.py  mercurial.py  setuptools.py  subversion.py  util.py
tests/: base.py  test_bazaar.py  test_cli.py  test_core.py  test_darcs.py  test_fossil.py  test_git.py  test_mercurial.py  test_setuptools.py  test_subversion.py  test_util.py
