[metadata]
name = scmver
description = A package version manager based on SCM tags
long_description = file: README.rst
author = Akinori Hattori
author_email = hattya@gmail.com
url = https://github.com/hattya/scmver
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
python_requires = >= 3.8
packages = scmver

[options.package_data]
scmver = py.typed

[options.extras_require]
cli = click
toml = tomli

[sdist]
formats = zip
group = users

[bdist_wheel]
universal = 1

[flake8]
extend-ignore = E129, E741
max-line-length = 160
per-file-ignores =
    scmver/__init__.py: F401, F403
    setup.py: E402

[mypy]
ignore_missing_imports = True
implicit_reexport = True
strict = True
